fix some bugs in the design

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
       <div class="content">
         <h1>STAR WARS</h1>
 
-        <h2>Select your character</h2>
+        <h4 id="selectplayer">Select your character</h4>
         <!--the players divs container-->
         <div class="flex-container playerfield"></div>
 
-        <h2 id="enemies">Enemies available to attack</h2>
+        <h4 id="enemies">Enemies available to attack</h4>
         <!--the enemy divs container-->
         <div class="flex-container enemypool"></div>
 
-        <h3 id="begin">Begin fight</h3>
+        <h4 id="begin">Begin fight</h4>
         <!--attack button-->
         <button id="attack" type="button" class="btn btn-outline-warning">ATTACK YOUR ENEMEY</button>
 
-        <h3 id="deffend">Deffender</h3>
+        <h4 id="deffend">Deffender</h4>
 
         <!--container to have the deffender div-->
         <div class="flex-container defenderpool"></div>
